<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/ic_bg3"
    tools:context=".activities.IntroActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
        android:text="@string/take_a_moment_subtitle"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="@dimen/lets_get_started_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/intro_text_marginStartEnd"
        android:layout_marginTop="@dimen/intro_text_marginStartEnd"
        android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
        android:text="@string/take_a_moment_description"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/intro_text_size" />

    <ImageView
        android:layout_width="121dp"
        android:layout_height="105dp"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
        android:layout_marginBottom="@dimen/intro_screen_title_text_marginTop"
        android:contentDescription="intro_image"
        android:src="@drawable/earth" />

    <Button
        android:id="@+id/btn_sign_in_intro"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:gravity="center"
        android:background="@drawable/white_button_rounded"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_in"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_sign_up_intro"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/dont_have_account"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/btn_text_size_sm" />

</LinearLayout>