<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MyProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_my_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bg3">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tv_timezone"
                        android:gravity="center_vertical"
                        android:text="@string/your_timezone"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/authentication_description_text_size" />

                    <Spinner
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:id="@+id/sp_your_timezone_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/timezone_list"
                        android:spinnerMode="dialog"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_mom_name_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mom_name"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tv_timezone"
                        android:gravity="center_vertical"
                        android:text="@string/mom_timezone"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/authentication_description_text_size" />

                    <Spinner
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:id="@+id/sp_mom_timezone_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/timezone_list"
                        android:spinnerMode="dialog"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/btn_marginStartEnd"
                    android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                    android:layout_marginEnd="@dimen/btn_marginStartEnd"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/update"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/btn_text_size" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>